[package]
name = "spaghetti"
authors = ["spuds"]
repository = "https://github.com/bananaturtlesandwich/spaghetti"
description = "a kismet hooker for cooked unreal engine blueprints"
readme = "README.md"
version = "1.0.0"
edition = "2021"

[dependencies]
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding", rev = "e1fed1f" }
clap = { version = "4.5", features = ["derive"] }
rfd = "0.14"

[profile.dev.package."*"]
opt-level = 3
